--- a/.github/workflows/nightly-playground-deploy.yml
+++ b/.github/workflows/nightly-playground-deploy.yml
@@ -104,22 +104,27 @@ jobs:
     continue-on-error: true
     steps:
       - uses: actions/checkout@v3
-      - name: Create notification channel
-        run : |
-          curl -XPOST -f "https://${{needs.validate-and-deploy.outputs.ENDPOINT}}:8443/_plugins/_notifications/configs" -H 'Content-Type: application/json' -d'
-          {
-            "config_id": "slack-notification-channel",
-            "name": "slack-notification-channel",
-            "config": {
+
+      - name: Check and Create notification channel
+        run: |
+          status_code=$(curl -XGET -s -o /dev/null -w "%{http_code}" "https://${{needs.validate-and-deploy.outputs.ENDPOINT}}:8443/_plugins/_notifications/configs/slack-notification-channel" -u ${{ secrets.OPENSEARCH_USER }}:${{ secrets.OPENSEARCH_PASSWORD }} --insecure)
+
+          if [ $status_code != 200 ]; then
+            curl -XPOST -f "https://${{needs.validate-and-deploy.outputs.ENDPOINT}}:8443/_plugins/_notifications/configs" -H 'Content-Type: application/json' -d'
+            {
+              "config_id": "slack-notification-channel",
               "name": "slack-notification-channel",
-              "description": "Slack notification channel for monitoring alerts",
-              "config_type": "webhook",
-              "is_enabled": true,
-              "webhook": {
-                "url": "${{ secrets.SLACK_WEBHOOK }}"
+              "config": {
+                "name": "slack-notification-channel",
+                "description": "Slack notification channel for monitoring alerts",
+                "config_type": "webhook",
+                "is_enabled": true,
+                "webhook": {
+                  "url": "${{ secrets.SLACK_WEBHOOK }}"
+                  }
                 }
-              }
-            }' -u ${{ secrets.OPENSEARCH_USER }}:${{ secrets.OPENSEARCH_PASSWORD }} --insecure
+              }' -u ${{ secrets.OPENSEARCH_USER }}:${{ secrets.OPENSEARCH_PASSWORD }} --insecure
+          fi
 
       - name: Configure monitors
         run: |
