--- a/nightly-playground/resources/security-config/internal_users.yml
+++ b/nightly-playground/resources/security-config/internal_users.yml
@@ -1,40 +1,39 @@
----
 # This is the internal user database
 # The hash value is a bcrypt hash and can be generated with plugin/tools/hash.sh
 
 _meta:
-   type: 'internalusers'
-   config_version: 2
+  type: internalusers
+  config_version: 2
 
 # Define your internal users here
 
 admin:
-  hash: '\$2y\$12\$fkypbXL0jRI5T25GNBJB3uhPnixWJVPGhFGIQoIaoWuUAQzzOfe3G'
+  hash: \$2y\$12\$2lmllQPaWR9hQgvWfqUYPeknLL3vhwX.VtIa71KMVyXd1qMUZKNtm
   reserved: true
   backend_roles:
-  - "admin"
-  description: "Admin user with customized password"
+    - admin
+  description: Admin user with customized password
 
 kibanaserver:
-  hash: '\$2y\$12\$t17cD/p.ZlsR2jOav7fYfuzk0sWrq1GXZihq3eWsbqXheSJk8Nr2O'
+  hash: \$2y\$12\$t17cD/p.ZlsR2jOav7fYfuzk0sWrq1GXZihq3eWsbqXheSJk8Nr2O
   reserved: true
-  description: "OpenSearch Dashboards user with customized password"
+  description: OpenSearch Dashboards user with customized password
 
 kibanaro:
-  hash: '\$2a\$12\$JJSXNfTowz7Uu5ttXfeYpeYE0arACvcwlPBStB1F.MI7f0U9Z4DGC'
+  hash: \$2a\$12\$JJSXNfTowz7Uu5ttXfeYpeYE0arACvcwlPBStB1F.MI7f0U9Z4DGC
   reserved: false
   backend_roles:
-  - "kibanauser"
-  - "readall"
+    - kibanauser
+    - readall
   attributes:
-    attribute1: "value1"
-    attribute2: "value2"
-    attribute3: "value3"
-  description: "Demo read-only user for OpenSearch dashboards"
+    attribute1: value1
+    attribute2: value2
+    attribute3: value3
+  description: Demo read-only user for OpenSearch dashboards
 
 readall:
-  hash: '\$2a\$12\$ae4ycwzwvLtZxwZ82RmiEunBbIPiAmGZduBAjKN0TXdwQFtCwARz2'
+  hash: \$2a\$12\$ae4ycwzwvLtZxwZ82RmiEunBbIPiAmGZduBAjKN0TXdwQFtCwARz2
   reserved: false
   backend_roles:
-  - "readall"
-  description: "Demo readall user"
+    - readall
+  description: Demo readall user
