--- a/nightly-playground/resources/security-config/roles_mapping.yml
+++ b/nightly-playground/resources/security-config/roles_mapping.yml
@@ -20,6 +20,12 @@ all_access:
     - "admin_role_for_nightly"
   description: "Maps admin to all_access"
 
+all_access_nightly:
+  reserved: false
+  backend_roles:
+    - "all_access_documentation_team"
+  description: "Maps all_access_documentation_team to all_access_nightly"
+
 own_index:
   reserved: false
   users:
