--- a/nightly-playground/package.json
+++ b/nightly-playground/package.json
@@ -19,7 +19,8 @@
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "@types/semver": "^7.5.6"
   },
   "dependencies": {
     "@opensearch-project/opensearch-cluster-cdk": "1.3.0",
@@ -31,6 +32,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "semver": "^7.5.4"
   }
 }
