CDK PR Reviews and Edits
Signed-off-by: Divyam Sengar <divsen@amazon.com>

--- a/oscar/.gitignore
+++ b/oscar/.gitignore
@@ -1,51 +1,34 @@
-aws_id.txt
-.env
-.env.example
-DEPLOYMENT_GUIDE.md
-# Autogen Serverless Framework
-.serverless/
-.node_modules/
-slack-bot/node_modules/
-./slack-bot/node_modules/
-# CDK specific
+# Environment and secrets
+.env*
+
+# Build outputs
+build_docs/
 cdk.out/
 .cdk.staging/
 cdk-outputs.json
-slack-bot/.pytest_cache
-slack-bot/node_modules
-slack-bot/node_modules/*
-slack-bot/node_modules/
-build_docs
-build_docs/
-./build_docs/
+
+# Dependencies
+node_modules/
+.serverless/
+
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-env/
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
 *.egg-info/
-.installed.cfg
-*.egg
+.pytest_cache/
 
-# Virtual Environment
+# Virtual environments
 .venv/
 venv/
 ENV/
+env/
 
-# IDE specific files
+# IDE and OS
 .idea/
 .vscode/
 *.swp
