added some final touches for reactions, formatting, etc.
Signed-off-by: Divyam Sengar <divsen@amazon.com>

--- a/oscar/.env.example
+++ b/oscar/.env.example
@@ -19,7 +19,7 @@ OSCAR_BEDROCK_AGENT_ALIAS_ID=your-bedrock-agent-alias-id
 
 # Authorization Configuration (Required)
 # Comma-separated list of Slack user IDs authorized to use OSCAR
-AUTHORIZED_MESSAGE_SENDERS=U091B0QH1QD,U032Q5N0HTM
+AUTHORIZED_MESSAGE_SENDERS=
 # Comma-separated list of Slack channel IDs where OSCAR can operate
 CHANNEL_ALLOW_LIST=C096MV7JZ0T,C09827S7CEB
 
