--- a/oscar/metrics/requirements.txt
+++ b/oscar/metrics/requirements.txt
@@ -5,6 +5,7 @@ botocore>=1.34.0
 # HTTP and networking
 requests>=2.31.0
 urllib3>=2.0.0
+python-dotenv>=1.0.0
 
 # Additional dependencies for metrics functionality
 certifi>=2023.7.22
