--- a/oscar/oscar-agent/requirements.txt
+++ b/oscar/oscar-agent/requirements.txt
@@ -7,6 +7,7 @@ slack_sdk>=3.19.0
 # Additional dependencies for enhanced functionality
 requests>=2.31.0
 urllib3>=2.0.0
+python-dotenv>=1.0.0
 
 # Metrics integration dependencies
 opensearch-py==2.4.2
