--- a/oscar/.env.example
+++ b/oscar/.env.example
@@ -10,14 +10,25 @@ AWS_REGION=us-east-1
 AWS_ACCOUNT_ID=your-aws-account-id
 AWS_DEFAULT_REGION=us-east-1
 
-# OSCAR Bedrock Agent Configuration
-OSCAR_BEDROCK_AGENT_ID=your-bedrock-agent-id
-OSCAR_BEDROCK_AGENT_ALIAS_ID=your-bedrock-agent-alias-id
+# OSCAR Dual-Agent Configuration
+# Privileged Agent (full access for authorized users)
+OSCAR_PRIVILEGED_BEDROCK_AGENT_ID=your-privileged-agent-id
+OSCAR_PRIVILEGED_BEDROCK_AGENT_ALIAS_ID=your-privileged-agent-alias-id
+
+# Limited Agent (read-only access for all users)
+OSCAR_LIMITED_BEDROCK_AGENT_ID=your-limited-agent-id
+OSCAR_LIMITED_BEDROCK_AGENT_ALIAS_ID=your-limited-agent-alias-id
+
+# Knowledge Base (shared by both agents)
 KNOWLEDGE_BASE_ID=your-knowledge-base-id
 
-# Authorization
-AUTHORIZED_MESSAGE_SENDERS=U123456789,U987654321
-CHANNEL_ALLOW_LIST=C123456789,C987654321 
+# Authorization Configuration
+# Users with full privileged agent access (Jenkins, messaging, etc.)
+FULLY_AUTHORIZED_USERS=U123456789,U987654321
+# Users with DM access (can use limited agent in direct messages)
+DM_AUTHORIZED_USERS=U123456789,U987654321
+# Channels where bot can respond
+CHANNEL_ALLOW_LIST=C123456789,C987654321
 #the above are example user and channel IDs
 
 # DynamoDB Tables
@@ -150,3 +161,9 @@ LOG_MAX_HISTORY_ENTRIES=2
 DISABLE_CONFIG_VALIDATION=false
 DISABLE_METRICS_CONFIG_VALIDATION=false
 
+# Jenkins Configuration
+JENKINS_AGENT_ID=your-jenkins-agent-id
+JENKINS_AGENT_ALIAS_ID=your-jenkins-agent-alias-id
+JENKINS_LAMBDA_FUNCTION_NAME=oscar-jenkins-agent
+JENKINS_URL=https://build.ci.opensearch.org
+JENKINS_API_TOKEN=your-jenkins-api-token
