removed excess files/data
Signed-off-by: Divyam Sengar <divsen@amazon.com>

--- a/oscar/.env.example
+++ b/oscar/.env.example
@@ -165,5 +165,5 @@ DISABLE_METRICS_CONFIG_VALIDATION=false
 JENKINS_AGENT_ID=your-jenkins-agent-id
 JENKINS_AGENT_ALIAS_ID=your-jenkins-agent-alias-id
 JENKINS_LAMBDA_FUNCTION_NAME=oscar-jenkins-agent
-JENKINS_URL=https://build.ci.opensearch.org
+JENKINS_URL=your-jenkins-url
 JENKINS_API_TOKEN=your-jenkins-api-token
