--- a/.github/workflows/nightly-playground-deploy.yml
+++ b/.github/workflows/nightly-playground-deploy.yml
@@ -152,5 +152,9 @@ jobs:
           done
           
       - name: Add Search Relevance Workbench data
+        working-directory: nightly-playground
         run : |
-          ./nightly-playground/scripts/search_relevance --url https://${{needs.validate-and-deploy.outputs.ENDPOINT}}/${{needs.validate-and-deploy.outputs.PLAYGROUND_ID}}/
+          export OPENSEARCH_USER=${{ secrets.OPENSEARCH_USER }}
+          export OPENSEARCH_PASSWORD=${{ secrets.OPENSEARCH_PASSWORD }}
+          cd scripts
+          ./search_relevance.sh --url https://${{needs.validate-and-deploy.outputs.ENDPOINT}}:8443
