Fix permissions for anonymous and logged in users
Signed-off-by: Sayali Gaikawad <gaiksaya@amazon.com>

--- a/nightly-playground/resources/security-config/roles.yml
+++ b/nightly-playground/resources/security-config/roles.yml
@@ -555,3 +555,73 @@ all_access_nightly:
         - "*"
       allowed_actions:
         - "kibana_all_write"
+
+# Anonymous access role
+opendistro_security_anonymous_role:
+  reserved: true
+  cluster_permissions:
+    # For using _cat/indices
+    - 'cluster:monitor/state'
+    - 'cluster:monitor/health'
+    - 'cluster:monitor/nodes/info'
+    # To enable read access to ISM
+    - cluster:admin/opendistro/ism/policy/search
+    - cluster:admin/opendistro/ism/managedindex/explain
+    - cluster:admin/opendistro/rollup/search
+    - cluster:admin/opendistro/transform/get_transforms
+    # To enable read access to various ISM Jobs
+    - cluster:admin/opendistro/rollup/explain
+    - cluster:admin/opendistro/ism/policy/get
+    - cluster:admin/opendistro/rollup/get
+    - cluster:admin/opendistro/transform/explain
+    - cluster:admin/opendistro/transform/get
+    # To enable read access to security analytics
+    - cluster:admin/opensearch/securityanalytics/rule/search
+    - cluster:admin/opensearch/securityanalytics/detector/search
+    - cluster:admin/opensearch/securityanalytics/findings/get
+    - cluster:admin/opensearch/securityanalytics/alerts/get
+    - cluster:admin/opensearch/securityanalytics/detector/get
+    - cluster:admin/opensearch/securityanalytics/logtype/search
+    # For using sql join query
+    - "indices:data/read/scroll*"
+  index_permissions:
+    - index_patterns:
+      - ".kibana"
+      - ".kibana_*"
+      allowed_actions:
+        - "read"
+    - index_patterns:
+      - ".tasks"
+      - ".management-beats"
+      - "*:.tasks"
+      - "*:.management-beats"
+      allowed_actions:
+        - "read"
+    - index_patterns:
+      - 'opensearch_dashboards_sample_data_logs'
+      - 'opensearch_dashboards_sample_data_flights'
+      - 'opensearch_dashboards_sample_data_ecommerce'
+      - 'opensearch'
+      - 'opensearch-dashboards'
+      - 'search-relevance-*'
+      allowed_actions:
+        - "read"
+    - index_patterns:
+      - '*'
+      allowed_actions:
+        - "read"
+        - "indices:data/read/mget"
+        - "indices:data/read/msearch"
+        - "indices:data/read/mtv"
+        - "indices:admin/get"
+        - "indices:admin/aliases/exists*"
+        - "indices:admin/aliases/get*"
+        - "indices:admin/mappings/get"
+        - "indices:data/read/scroll"
+        - "indices:monitor/settings/get"
+        - "indices:monitor/stats"
+  tenant_permissions:
+    - tenant_patterns:
+      - '*'
+      allowed_actions:
+        - "kibana_all_read"
