--- a/.github/workflows/nightly-playground-trigger.yml
+++ b/.github/workflows/nightly-playground-trigger.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:   
   deploy-nightly-playground:
+    if: github.repository == 'opensearch-project/opensearch-devops'
     strategy:
       matrix:
         dist_version: ['2.19.3', '3.2.0']
